--- a/estilo.css
+++ b/estilo.css
@@ -51,7 +51,13 @@ header {
     align-items: center;
     justify-content: center;
     height: 200vh;
-  }
+  }footer {
+  background-color: #f2f2f2;
+  padding: 10px;
+  text-align: center;
+}
+
+
   
   img {
     max-width: 100%;
