--- a/estilo.css
+++ b/estilo.css
@@ -52,7 +52,8 @@ header {
     justify-content: center;
     height: 200vh;
   }footer {
-  background-color: #f2f2f2;
+ background-color: #e65555;
+ 
   padding: 10px;
   text-align: center;
 }
