--- a/estilo.css
+++ b/estilo.css
@@ -64,4 +64,25 @@ header {
     max-width: 100%;
     max-height: 100%;
   }
-  
+  .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.rectangle {
+  width: 200px;
+  height: 100px;
+  background-color: #ff0000;
+  margin: 10px;
+}
+
+.circle {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #00ff00;
+  margin: 10px;
+}
+
